Added modifier for post page title on mobile.

--- a/src/IAmBacon/IAmBacon/Content/sass/components/_page-title.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/components/_page-title.scss
@@ -26,6 +26,12 @@
 	}
 }
 
+.pageTitle-headline--post {
+    @include respond-to(extra-small) {
+		@include font-size($h3-font-size);
+	}
+}
+
 .pageTitle-subline {
     @include font-size($h3-font-size);
     margin-top: 0;  
