--- a/src/IAmBacon/IAmBacon/Views/Post/Details.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Post/Details.cshtml
@@ -18,7 +18,7 @@
 <article itemscope itemtype="http://schema.org/BlogPosting">
     <header>
         <div class="pageTitle layoutContainer layoutContainer--visible has-triangle">
-            <h1 class="pageTitle-headline" itemprop="name headline">@Model.Title</h1>
+            <h1 class="pageTitle-headline pageTitle-headline--post" itemprop="name headline">@Model.Title</h1>
         </div>
         <ul class="layoutContainer metaData">
             <li>
