--- a/src/IAmBacon/IAmBacon/Content/stylesheets/pages/post/post-ie.css
+++ b/src/IAmBacon/IAmBacon/Content/stylesheets/pages/post/post-ie.css
@@ -809,7 +809,14 @@ code {
   }
 }
 
-/* line 29, ../../../sass/components/_page-title.scss */
+@media only screen and (max-width: 767px) {
+  /* line 29, ../../../sass/components/_page-title.scss */
+  .pageTitle-headline--post {
+    font-size: 24px;
+  }
+}
+
+/* line 35, ../../../sass/components/_page-title.scss */
 .pageTitle-subline {
   font-size: 24px;
   margin-top: 0;
@@ -819,17 +826,17 @@ code {
   color: white;
 }
 @media only screen and (max-width: 767px) {
-  /* line 29, ../../../sass/components/_page-title.scss */
+  /* line 35, ../../../sass/components/_page-title.scss */
   .pageTitle-subline {
     font-size: 16px;
   }
 }
 
-/* line 43, ../../../sass/components/_page-title.scss */
+/* line 49, ../../../sass/components/_page-title.scss */
 .has-triangle {
   position: relative;
 }
-/* line 46, ../../../sass/components/_page-title.scss */
+/* line 52, ../../../sass/components/_page-title.scss */
 .has-triangle:after {
   content: "";
   position: absolute;
@@ -841,7 +848,7 @@ code {
   z-index: 1;
 }
 @media only screen and (max-width: 767px) {
-  /* line 46, ../../../sass/components/_page-title.scss */
+  /* line 52, ../../../sass/components/_page-title.scss */
   .has-triangle:after {
     border-width: 18px 18px 0;
     bottom: -18px;
