--- a/src/IAmBacon/IAmBacon/Views/Post/Details.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Post/Details.cshtml
@@ -17,8 +17,8 @@
 
 <article itemscope itemtype="http://schema.org/BlogPosting">
     <header>
-        <div class="pageTitle layoutContainer layoutContainer--visible has-triangle">
-            <h1 class="pageTitle-headline pageTitle-headline--post" itemprop="name headline">@Model.Title</h1>
+        <div class="pageTitle">
+            <h1 class="layoutContainer layoutContainer--visible has-triangle pageTitle-headline pageTitle-headline--post" itemprop="name headline">@Model.Title</h1>
         </div>
         <ul class="layoutContainer metaData">
             <li>
@@ -86,4 +86,3 @@
         }
     </section>
 }
-
