Added page title. Started category list on blog landing page.

--- a/src/IAmBacon/IAmBacon/Content/sass/components/_page-title.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/components/_page-title.scss
@@ -26,7 +26,7 @@
 	}
 }
 
-.pageTitle-headline--post {
+.pageTitle-headline--sm {
     @include respond-to(extra-small) {
 		@include font-size($h3-font-size);
 	}
