--- a/src/IAmBacon/IAmBacon/Content/stylesheets/pages/post/category.css
+++ b/src/IAmBacon/IAmBacon/Content/stylesheets/pages/post/category.css
@@ -1,128 +1,502 @@
-/*$base-line-height: 2;*/
-/* line 7, ../../../sass/objects/_lists.scss */
-.listInline > li {
-  display: inline-block;
-}
-
-/* line 1, ../../../sass/partials/_html-body.scss */
+/*! normalize.css v3.0.1 | MIT License | git.io/normalize */
+/**
+ * 1. Set default font family to sans-serif.
+ * 2. Prevent iOS text size adjust after orientation change, without disabling
+ *    user zoom.
+ */
+/* line 9, ../../../sass/base/_normalize.scss */
 html {
-  font-size: 62.5%;
+  font-family: sans-serif;
+  /* 1 */
+  -ms-text-size-adjust: 100%;
+  /* 2 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */
 }
 
-/* line 5, ../../../sass/partials/_html-body.scss */
+/**
+ * Remove default margin.
+ */
+/* line 19, ../../../sass/base/_normalize.scss */
 body {
-  font-family: "Lato", sans-serif;
-  color: #333333;
-  background-color: white;
-  font-size: 1.6rem;
-  line-height: 1.5;
+  margin: 0;
 }
 
-/* line 13, ../../../sass/partials/_html-body.scss */
-.h1 {
-  font-size: 24px !important;
-  font-size: 2.4rem !important;
-}
-@media screen and (min-width: 54.1rem) {
-  /* line 13, ../../../sass/partials/_html-body.scss */
-  .h1 {
-    font-size: 36px !important;
-    font-size: 3.6rem !important;
-  }
+/* HTML5 display definitions
+   ========================================================================== */
+/**
+ * Correct `block` display not defined for any HTML5 element in IE 8/9.
+ * Correct `block` display not defined for `details` or `summary` in IE 10/11 and Firefox.
+ * Correct `block` display not defined for `main` in IE 11.
+ */
+/* line 43, ../../../sass/base/_normalize.scss */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+nav,
+section,
+summary {
+  display: block;
 }
 
-/* line 23, ../../../sass/partials/_html-body.scss */
-h2 {
-  font-size: 2rem;
-}
-@media screen and (min-width: 54.1rem) {
-  /* line 23, ../../../sass/partials/_html-body.scss */
-  h2 {
-    font-size: 4.8rem;
-  }
+/**
+ * 1. Correct `inline-block` display not defined in IE 8/9.
+ * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
+ */
+/* line 55, ../../../sass/base/_normalize.scss */
+audio,
+canvas,
+progress,
+video {
+  display: inline-block;
+  /* 1 */
+  vertical-align: baseline;
+  /* 2 */
 }
 
-/* line 31, ../../../sass/partials/_html-body.scss */
+/**
+ * Prevent modern browsers from displaying `audio` without controls.
+ * Remove excess height in iOS 5 devices.
+ */
+/* line 65, ../../../sass/base/_normalize.scss */
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+
+/**
+ * Address `[hidden]` styling not present in IE 8/9/10.
+ * Hide the `template` element in IE 8/9/11, Safari, and Firefox < 22.
+ */
+/* line 76, ../../../sass/base/_normalize.scss */
+[hidden],
+template {
+  display: none;
+}
+
+/* Links
+   ========================================================================== */
+/**
+ * Remove the gray background color from active links in IE 10.
+ */
+/* line 87, ../../../sass/base/_normalize.scss */
+a {
+  background: transparent;
+}
+
+/**
+ * Improve readability when focused and also mouse hovered in all browsers.
+ */
+/* line 96, ../../../sass/base/_normalize.scss */
+a:active,
+a:hover {
+  outline: 0;
+}
+
+/* Text-level semantics
+   ========================================================================== */
+/**
+ * Address styling not present in IE 8/9/10/11, Safari, and Chrome.
+ */
+/* line 107, ../../../sass/base/_normalize.scss */
+abbr[title] {
+  border-bottom: 1px dotted;
+}
+
+/**
+ * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
+ */
+/* line 116, ../../../sass/base/_normalize.scss */
+b,
+strong {
+  font-weight: bold;
+}
+
+/**
+ * Address styling not present in Safari and Chrome.
+ */
+/* line 124, ../../../sass/base/_normalize.scss */
+dfn {
+  font-style: italic;
+}
+
+/**
+ * Address variable `h1` font-size and margin within `section` and `article`
+ * contexts in Firefox 4+, Safari, and Chrome.
+ */
+/* line 133, ../../../sass/base/_normalize.scss */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/**
+ * Address styling not present in IE 8/9.
+ */
+/* line 142, ../../../sass/base/_normalize.scss */
+mark {
+  background: #ff0;
+  color: #000;
+}
+
+/**
+ * Address inconsistent and variable font size in all browsers.
+ */
+/* line 151, ../../../sass/base/_normalize.scss */
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` affecting `line-height` in all browsers.
+ */
+/* line 160, ../../../sass/base/_normalize.scss */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+/* line 167, ../../../sass/base/_normalize.scss */
+sup {
+  top: -0.5em;
+}
+
+/* line 171, ../../../sass/base/_normalize.scss */
+sub {
+  bottom: -0.25em;
+}
+
+/* Embedded content
+   ========================================================================== */
+/**
+ * Remove border when inside `a` element in IE 8/9/10.
+ */
+/* line 182, ../../../sass/base/_normalize.scss */
+img {
+  border: 0;
+}
+
+/**
+ * Correct overflow not hidden in IE 9/10/11.
+ */
+/* line 190, ../../../sass/base/_normalize.scss */
+svg:not(:root) {
+  overflow: hidden;
+}
+
+/* Grouping content
+   ========================================================================== */
+/**
+ * Address margin not present in IE 8/9 and Safari.
+ */
+/* line 201, ../../../sass/base/_normalize.scss */
+figure {
+  margin: 1em 40px;
+}
+
+/**
+ * Address differences between Firefox and other browsers.
+ */
+/* line 209, ../../../sass/base/_normalize.scss */
+hr {
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  height: 0;
+}
+
+/**
+ * Contain overflow in all browsers.
+ */
+/* line 219, ../../../sass/base/_normalize.scss */
+pre {
+  overflow: auto;
+}
+
+/**
+ * Address odd `em`-unit font size rendering in all browsers.
+ */
+/* line 230, ../../../sass/base/_normalize.scss */
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+/* Forms
+   ========================================================================== */
+/**
+ * Known limitation: by default, Chrome and Safari on OS X allow very limited
+ * styling of `select`, unless a `border` property is set.
+ */
+/**
+ * 1. Correct color not being inherited.
+ *    Known issue: affects color of disabled elements.
+ * 2. Correct font properties not being inherited.
+ * 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
+ */
+/* line 254, ../../../sass/base/_normalize.scss */
+button,
+input,
+optgroup,
+select,
+textarea {
+  color: inherit;
+  /* 1 */
+  font: inherit;
+  /* 2 */
+  margin: 0;
+  /* 3 */
+}
+
+/**
+ * Address `overflow` set to `hidden` in IE 8/9/10/11.
+ */
+/* line 264, ../../../sass/base/_normalize.scss */
+button {
+  overflow: visible;
+}
+
+/**
+ * Address inconsistent `text-transform` inheritance for `button` and `select`.
+ * All other form control elements do not inherit `text-transform` values.
+ * Correct `button` style inheritance in Firefox, IE 8/9/10/11, and Opera.
+ * Correct `select` style inheritance in Firefox.
+ */
+/* line 276, ../../../sass/base/_normalize.scss */
+button,
+select {
+  text-transform: none;
+}
+
+/**
+ * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
+ *    and `video` controls.
+ * 2. Correct inability to style clickable `input` types in iOS.
+ * 3. Improve usability and consistency of cursor style between image-type
+ *    `input` and others.
+ */
+/* line 291, ../../../sass/base/_normalize.scss */
+button,
+html input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  -webkit-appearance: button;
+  /* 2 */
+  cursor: pointer;
+  /* 3 */
+}
+
+/**
+ * Re-set default cursor for disabled elements.
+ */
+/* line 301, ../../../sass/base/_normalize.scss */
+button[disabled],
+html input[disabled] {
+  cursor: default;
+}
+
+/**
+ * Remove inner padding and border in Firefox 4+.
+ */
+/* line 310, ../../../sass/base/_normalize.scss */
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+
+/**
+ * Address Firefox 4+ setting `line-height` on `input` using `!important` in
+ * the UA stylesheet.
+ */
+/* line 320, ../../../sass/base/_normalize.scss */
+input {
+  line-height: normal;
+}
+
+/**
+ * It's recommended that you don't attempt to style these elements.
+ * Firefox's implementation doesn't respect box-sizing, padding, or width.
+ *
+ * 1. Address box sizing set to `content-box` in IE 8/9/10.
+ * 2. Remove excess padding in IE 8/9/10.
+ */
+/* line 333, ../../../sass/base/_normalize.scss */
+input[type="checkbox"],
+input[type="radio"] {
+  box-sizing: border-box;
+  /* 1 */
+  padding: 0;
+  /* 2 */
+}
+
+/**
+ * Fix the cursor style for Chrome's increment/decrement buttons. For certain
+ * `font-size` values of the `input`, it causes the cursor style of the
+ * decrement button to change from `default` to `text`.
+ */
+/* line 345, ../../../sass/base/_normalize.scss */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+ * 1. Address `appearance` set to `searchfield` in Safari and Chrome.
+ * 2. Address `box-sizing` set to `border-box` in Safari and Chrome
+ *    (include `-moz` to future-proof).
+ */
+/* line 355, ../../../sass/base/_normalize.scss */
+input[type="search"] {
+  -webkit-appearance: textfield;
+  /* 1 */
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  /* 2 */
+  box-sizing: content-box;
+}
+
+/**
+ * Remove inner padding and search cancel button in Safari and Chrome on OS X.
+ * Safari (but not Chrome) clips the cancel button when the search input has
+ * padding (and `textfield` appearance).
+ */
+/* line 369, ../../../sass/base/_normalize.scss */
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * Define consistent border, margin, and padding.
+ */
+/* line 377, ../../../sass/base/_normalize.scss */
+fieldset {
+  border: 1px solid #c0c0c0;
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em;
+}
+
+/**
+ * 1. Correct `color` not being inherited in IE 8/9/10/11.
+ * 2. Remove padding so people aren't caught out if they zero out fieldsets.
+ */
+/* line 388, ../../../sass/base/_normalize.scss */
+legend {
+  border: 0;
+  /* 1 */
+  padding: 0;
+  /* 2 */
+}
+
+/**
+ * Remove default vertical scrollbar in IE 8/9/10/11.
+ */
+/* line 397, ../../../sass/base/_normalize.scss */
+textarea {
+  overflow: auto;
+}
+
+/**
+ * Don't inherit the `font-weight` (applied by a rule above).
+ * NOTE: the default cannot safely be changed in Chrome and Safari on OS X.
+ */
+/* line 406, ../../../sass/base/_normalize.scss */
+optgroup {
+  font-weight: bold;
+}
+
+/* Tables
+   ========================================================================== */
+/**
+ * Remove most spacing between table cells.
+ */
+/* line 417, ../../../sass/base/_normalize.scss */
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* line 423, ../../../sass/base/_normalize.scss */
+td,
+th {
+  padding: 0;
+}
+
+/* line 29, ../../../sass/base/_base.scss */
+ul,
+ol {
+  list-style-type: none;
+}
+
+/* line 34, ../../../sass/base/_base.scss */
+ul,
+ol {
+  padding: 0;
+}
+
+/* line 45, ../../../sass/base/_base.scss */
+ul,
+ol,
+h1,
+h2,
+h3,
+p,
+dl,
+dd {
+  margin: 0;
+}
+
+/* line 49, ../../../sass/base/_base.scss */
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+/* line 55, ../../../sass/base/_base.scss */
 img {
   max-width: 100%;
   vertical-align: middle;
 }
 
-/* line 38, ../../../sass/partials/_html-body.scss */
-h1,
-h2,
-ul {
-  margin: 0;
+/* line 60, ../../../sass/base/_base.scss */
+h3 {
+  font-size: inherit;
 }
 
-/* line 43, ../../../sass/partials/_html-body.scss */
-ul,
-ol {
-  list-style-type: none;
-  padding-left: 0;
+/* line 64, ../../../sass/base/_base.scss */
+html {
+  font-size: 62.5%;
 }
 
-/* line 49, ../../../sass/partials/_html-body.scss */
-label,
-input[type=submit] {
-  display: block;
-  margin-top: 1em;
+/* line 68, ../../../sass/base/_base.scss */
+body {
+  font-size: 1.6rem;
+  line-height: 1.5;
+  font-family: "Lato", sans-serif;
+  color: black;
+  background-color: white;
 }
 
-/* line 57, ../../../sass/partials/_html-body.scss */
-input[type=text],
-input[type=email],
-input[type=url],
-textarea {
-  width: 100%;
-  padding-left: 0.5em;
-  padding-right: 0.5em;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-/* line 66, ../../../sass/partials/_html-body.scss */
-input[type=text],
-input[type=email],
-input[type=url] {
-  height: 2em;
-}
-
-/* line 70, ../../../sass/partials/_html-body.scss */
-textarea {
-  height: 7em;
-  padding-top: 0.5em;
-  padding-bottom: 0.5em;
-}
-
-/* line 76, ../../../sass/partials/_html-body.scss */
-a {
-  text-decoration: none;
-  color: inherit;
-}
-/* line 80, ../../../sass/partials/_html-body.scss */
-a:hover {
-  color: #63b7f6;
-}
-
-/* line 85, ../../../sass/partials/_html-body.scss */
+/* line 76, ../../../sass/base/_base.scss */
 blockquote {
-  font-family: Georgia, serif;
   font-style: italic;
-  font-size: 2rem;
 }
 
-/* line 91, ../../../sass/partials/_html-body.scss */
-.wrapper {
-  margin: 0 auto;
-  text-align: left;
-  max-width: 1440px;
-}
-
-/* line 97, ../../../sass/partials/_html-body.scss */
-.link {
-  text-decoration: underline;
+/* line 7, ../../../sass/objects/_lists.scss */
+.listInline > li {
+  display: inline-block;
 }
 
 /* line 8, ../../../sass/components/_header.scss */
@@ -184,9 +558,16 @@ blockquote {
 
 /* line 9, ../../../sass/components/_links-list.scss */
 .linksList {
-  overflow: hidden;
-  *zoom: 1;
   box-sizing: border-box;
+}
+/* line 15, ../../../sass/base/mixins/_clearfix.scss */
+.linksList:before, .linksList:after {
+  content: " ";
+  display: table;
+}
+/* line 19, ../../../sass/base/mixins/_clearfix.scss */
+.linksList:after {
+  clear: both;
 }
 
 @media only screen and (max-width: 767px) {
@@ -258,6 +639,77 @@ blockquote {
   overflow: hidden;
   display: inline-block;
   height: 48px;
+}
+
+/* line 8, ../../../sass/components/_page-title.scss */
+.pageTitle {
+  background-color: #83d6de;
+  position: relative;
+}
+
+/* line 13, ../../../sass/components/_page-title.scss */
+.pageTitle-headline {
+  font-size: 6rem;
+  line-height: 1.5;
+  color: #fffff7;
+  font-weight: 700;
+  margin: 0;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  text-align: center;
+  display: block;
+}
+@media only screen and (max-width: 767px) {
+  /* line 13, ../../../sass/components/_page-title.scss */
+  .pageTitle-headline {
+    font-size: 4.8rem;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  /* line 29, ../../../sass/components/_page-title.scss */
+  .pageTitle-headline--sm {
+    font-size: 2.4rem;
+  }
+}
+
+/* line 35, ../../../sass/components/_page-title.scss */
+.pageTitle-subline {
+  font-size: 2.4rem;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-bottom: 24px;
+  text-align: center;
+  color: white;
+}
+@media only screen and (max-width: 767px) {
+  /* line 35, ../../../sass/components/_page-title.scss */
+  .pageTitle-subline {
+    font-size: 1.6rem;
+  }
+}
+
+/* line 49, ../../../sass/components/_page-title.scss */
+.has-triangle {
+  position: relative;
+}
+/* line 52, ../../../sass/components/_page-title.scss */
+.has-triangle:after {
+  content: "";
+  position: absolute;
+  bottom: -24px;
+  left: 80px;
+  border-width: 24px 24px 0;
+  border-style: solid;
+  border-color: #83d6de transparent;
+  z-index: 1;
+}
+@media only screen and (max-width: 767px) {
+  /* line 52, ../../../sass/components/_page-title.scss */
+  .has-triangle:after {
+    border-width: 18px 18px 0;
+    bottom: -18px;
+  }
 }
 
 /* line 6, ../../../sass/utilities/_colours.scss */
@@ -398,4 +850,40 @@ blockquote {
 .m-tb--full {
   margin-top: 24px;
   margin-bottom: 24px;
+}
+
+/* line 36, ../../../sass/pages/post/category.scss */
+a {
+  text-decoration: none;
+  color: inherit;
+}
+/* line 40, ../../../sass/pages/post/category.scss */
+a:hover {
+  color: #63b7f6;
+}
+
+/* line 45, ../../../sass/pages/post/category.scss */
+.link {
+  text-decoration: underline;
+}
+
+/* line 49, ../../../sass/pages/post/category.scss */
+.h1 {
+  font-size: 24px !important;
+  font-size: 2.4rem !important;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+@media screen and (min-width: 54.1rem) {
+  /* line 49, ../../../sass/pages/post/category.scss */
+  .h1 {
+    font-size: 36px !important;
+    font-size: 3.6rem !important;
+  }
+}
+
+/* line 63, ../../../sass/pages/post/category.scss */
+article p {
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
