--- a/src/IAmBacon/IAmBacon/Views/Post/Details.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Post/Details.cshtml
@@ -18,7 +18,7 @@
 <article itemscope itemtype="http://schema.org/BlogPosting">
     <header>
         <div class="pageTitle">
-            <h1 class="layoutContainer layoutContainer--visible has-triangle pageTitle-headline pageTitle-headline--post" itemprop="name headline">@Model.Title</h1>
+            <h1 class="layoutContainer layoutContainer--visible has-triangle pageTitle-headline pageTitle-headline--sm" itemprop="name headline">@Model.Title</h1>
         </div>
         <ul class="layoutContainer metaData">
             <li>
