--- a/src/IAmBacon/IAmBacon/Views/Post/Index.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Post/Index.cshtml
@@ -21,5 +21,11 @@
     <h2 class="subTitle">Recent Posts</h2>
 
     @Html.DisplayFor(x => x.Posts)    
+    <aside>
+        <h2>Categories</h2>
+    </aside>
+    <aside>
+        
+    </aside>
 </div>
 
