--- a/src/IAmBacon/IAmBacon/Content/stylesheets/pages/post/landingpage.css
+++ b/src/IAmBacon/IAmBacon/Content/stylesheets/pages/post/landingpage.css
@@ -287,7 +287,7 @@ blockquote {
 
 @media only screen and (max-width: 767px) {
   /* line 29, ../../../sass/components/_page-title.scss */
-  .pageTitle-headline--post {
+  .pageTitle-headline--sm {
     font-size: 2.4rem;
   }
 }
