--- a/src/IAmBacon/IAmBacon/Content/stylesheets/pages/post/post-ie.css
+++ b/src/IAmBacon/IAmBacon/Content/stylesheets/pages/post/post-ie.css
@@ -811,7 +811,7 @@ code {
 
 @media only screen and (max-width: 767px) {
   /* line 29, ../../../sass/components/_page-title.scss */
-  .pageTitle-headline--post {
+  .pageTitle-headline--sm {
     font-size: 24px;
   }
 }
@@ -1003,14 +1003,26 @@ article a {
 article a:hover {
   text-decoration: underline;
 }
+/* line 65, ../../../sass/pages/post/post.scss */
+article h2,
+article h3,
+article footer {
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+/* line 72, ../../../sass/pages/post/post.scss */
+article h2 {
+  font-size: 20px;
+  font-size: 24px;
+}
 
-/* line 64, ../../../sass/pages/post/post.scss */
+/* line 81, ../../../sass/pages/post/post.scss */
 .image-center {
   margin: 0 auto;
   display: block;
 }
 
-/* line 69, ../../../sass/pages/post/post.scss */
+/* line 86, ../../../sass/pages/post/post.scss */
 .metaData {
   padding-top: 48px;
   padding-bottom: 24px;
