--- a/src/IAmBacon/IAmBacon/Views/Post/Tag.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Post/Tag.cshtml
@@ -7,8 +7,11 @@
 {
     @Styles.Render("~/bundles/tagIeCss")
 }
+<div class="pageTitle">
+    <div class="layoutContainer layoutContainer--visible has-triangle">
+        <h1 class="pageTitle-headline pageTitle-headline--sm">Recent posts for tag '@Model.Title'</h1>
+    </div>
+</div>
 <div class="layoutContainer">
-    <h1>Recent posts for tag '@Model.Title'</h1>
-
     @Html.DisplayFor(x => x.Posts)
 </div>
