--- a/src/IAmBacon/IAmBacon/Content/sass/utilities/_social.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/utilities/_social.scss
@@ -3,7 +3,7 @@
 // --------------------------------------------------
 
 .social {
-	background-image: image-url("social.png", false, true);
+	background-image: url(../../../images/social.png);
 	background-repeat: no-repeat;	
 	height: 32px;
 	width: 32px;
