--- a/src/IAmBacon/IAmBacon/Content/stylesheets/pages/post/landingpage-ie.css
+++ b/src/IAmBacon/IAmBacon/Content/stylesheets/pages/post/landingpage-ie.css
@@ -1,410 +1,272 @@
 /*$base-line-height: 2;*/
-/* line 7, ../../../sass/objects/_lists.scss */
 .listInline > li {
-  display: inline-block;
-}
+  display: inline-block; }
 
-/* line 1, ../../../sass/partials/_html-body.scss */
 html {
-  font-size: 62.5%;
-}
+  font-size: 62.5%; }
 
-/* line 5, ../../../sass/partials/_html-body.scss */
 body {
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
   color: #333333;
-  background-color: white;
+  background-color: #FFFFFF;
   font-size: 16px;
-  line-height: 1.5;
-}
+  line-height: 1.5; }
 
-/* line 13, ../../../sass/partials/_html-body.scss */
 .h1 {
   font-size: 24px !important;
   font-size: 2.4rem !important;
   font-size: 36px !important;
-  font-size: 3.6rem !important;
-}
+  font-size: 3.6rem !important; }
 
-/* line 23, ../../../sass/partials/_html-body.scss */
 h2 {
   font-size: 20px;
-  font-size: 48px;
-}
+  font-size: 48px; }
 
-/* line 31, ../../../sass/partials/_html-body.scss */
 img {
   max-width: 100%;
-  vertical-align: middle;
-}
+  vertical-align: middle; }
 
-/* line 38, ../../../sass/partials/_html-body.scss */
-h1,
-h2,
-ul {
-  margin: 0;
-}
+h1, h2, ul {
+  margin: 0; }
 
-/* line 43, ../../../sass/partials/_html-body.scss */
-ul,
-ol {
+ul, ol {
   list-style-type: none;
-  padding-left: 0;
-}
+  padding-left: 0; }
 
-/* line 49, ../../../sass/partials/_html-body.scss */
-label,
-input[type=submit] {
+label, input[type=submit] {
   display: block;
-  margin-top: 1em;
-}
+  margin-top: 1em; }
 
-/* line 57, ../../../sass/partials/_html-body.scss */
-input[type=text],
-input[type=email],
-input[type=url],
-textarea {
+input[type=text], input[type=email], input[type=url], textarea {
   width: 100%;
   padding-left: 0.5em;
   padding-right: 0.5em;
-  -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
-/* line 66, ../../../sass/partials/_html-body.scss */
-input[type=text],
-input[type=email],
-input[type=url] {
-  height: 2em;
-}
+input[type=text], input[type=email], input[type=url] {
+  height: 2em; }
 
-/* line 70, ../../../sass/partials/_html-body.scss */
 textarea {
   height: 7em;
   padding-top: 0.5em;
-  padding-bottom: 0.5em;
-}
+  padding-bottom: 0.5em; }
 
-/* line 76, ../../../sass/partials/_html-body.scss */
 a {
   text-decoration: none;
-  color: inherit;
-}
-/* line 80, ../../../sass/partials/_html-body.scss */
-a:hover {
-  color: #63b7f6;
-}
+  color: inherit; }
+  a:hover {
+    color: #63B7F6; }
 
-/* line 85, ../../../sass/partials/_html-body.scss */
 blockquote {
   font-family: Georgia, serif;
   font-style: italic;
-  font-size: 20px;
-}
+  font-size: 20px; }
 
-/* line 91, ../../../sass/partials/_html-body.scss */
 .wrapper {
   margin: 0 auto;
   text-align: left;
-  max-width: 1440px;
-}
+  max-width: 1440px; }
 
-/* line 97, ../../../sass/partials/_html-body.scss */
 .link {
-  text-decoration: underline;
-}
+  text-decoration: underline; }
 
-/* line 8, ../../../sass/components/_header.scss */
 .header {
-  border-bottom: 10px solid #60646d;
-}
-@media only screen and (max-width: 767px) {
-  /* line 8, ../../../sass/components/_header.scss */
-  .header {
-    border-bottom-width: 5px;
-  }
-}
+  border-bottom: 10px solid #60646D; }
+  @media only screen and (max-width: 767px) {
+    .header {
+      border-bottom-width: 5px; } }
 
-/* line 16, ../../../sass/components/_header.scss */
 .header-logo {
   font-size: 48px;
-  color: #60646d;
-  float: left;
-}
-@media only screen and (max-width: 767px) {
-  /* line 16, ../../../sass/components/_header.scss */
-  .header-logo {
-    font-size: 24px;
-  }
-}
+  color: #60646D;
+  float: left; }
+  @media only screen and (max-width: 767px) {
+    .header-logo {
+      font-size: 24px; } }
 
-/* line 26, ../../../sass/components/_header.scss */
 .header-nav {
-  float: right;
-}
+  float: right; }
 
-/* line 30, ../../../sass/components/_header.scss */
 .header-nav-link {
   font-size: 18px;
   line-height: 4;
-  color: #60646d;
-  margin-left: 24px;
-}
-@media only screen and (max-width: 767px) {
-  /* line 30, ../../../sass/components/_header.scss */
-  .header-nav-link {
-    line-height: 2;
-  }
-}
-/* line 40, ../../../sass/components/_header.scss */
-.header-nav-link:first-child {
-  margin-left: 0;
-}
+  color: #60646D;
+  margin-left: 24px; }
+  @media only screen and (max-width: 767px) {
+    .header-nav-link {
+      line-height: 2; } }
+  .header-nav-link:first-child {
+    margin-left: 0; }
 
-/* line 8, ../../../sass/components/_footer.scss */
 .footer {
-  color: #fffff7;
-}
+  color: #FFFFF7; }
 
-/* line 12, ../../../sass/components/_footer.scss */
 .footer-copyright {
-  text-align: center;
-}
+  text-align: center; }
 
-/* line 9, ../../../sass/components/_links-list.scss */
 .linksList {
-  overflow: hidden;
-  *zoom: 1;
-  box-sizing: border-box;
-}
+  -moz-box-sizing: border-box;
+       box-sizing: border-box; }
+  .linksList:before, .linksList:after {
+    content: " ";
+    display: table; }
+  .linksList:after {
+    clear: both; }
 
 @media only screen and (max-width: 767px) {
-  /* line 13, ../../../sass/components/_links-list.scss */
   .linksList-items {
     float: left;
     width: 100%;
-    margin-left: 2.29885%;
-    box-sizing: border-box;
-    margin-left: 0;
-  }
-}
+    margin-left: 2.2988505747%;
+    -moz-box-sizing: border-box;
+         box-sizing: border-box;
+    margin-left: 0; } }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-  /* line 13, ../../../sass/components/_links-list.scss */
   .linksList-items {
     float: left;
-    width: 48.85057%;
-    margin-left: 2.29885%;
-    box-sizing: border-box;
-  }
-  /* line 19, ../../../sass/base/mixins/_grid.scss */
-  .linksList-items:nth-of-type(odd) {
-    margin-left: 0;
-  }
-}
+    width: 48.8505747126%;
+    margin-left: 2.2988505747%;
+    -moz-box-sizing: border-box;
+         box-sizing: border-box; }
+    .linksList-items:nth-of-type(odd) {
+      margin-left: 0; } }
 @media only screen and (min-width: 992px) {
-  /* line 13, ../../../sass/components/_links-list.scss */
   .linksList-items {
     float: left;
-    width: 31.80077%;
-    margin-left: 2.29885%;
-    box-sizing: border-box;
-  }
-  /* line 25, ../../../sass/base/mixins/_grid.scss */
-  .linksList-items:first-child {
-    margin-left: 0;
-  }
-}
+    width: 31.8007662835%;
+    margin-left: 2.2988505747%;
+    -moz-box-sizing: border-box;
+         box-sizing: border-box; }
+    .linksList-items:first-child {
+      margin-left: 0; } }
 
 @media only screen and (min-width: 992px) {
-  /* line 27, ../../../sass/components/_links-list.scss */
   .linksList-items--posts {
     padding-left: 12px;
-    padding-right: 12px;
-  }
-  /* line 32, ../../../sass/components/_links-list.scss */
-  .linksList-items--posts:first-child {
-    padding-left: 0;
-  }
-}
+    padding-right: 12px; }
+    .linksList-items--posts:first-child {
+      padding-left: 0; } }
 
 @media only screen and (min-width: 992px) {
-  /* line 38, ../../../sass/components/_links-list.scss */
   .linksList-items--social {
-    text-align: right;
-  }
-}
+    text-align: right; } }
 
-/* line 44, ../../../sass/components/_links-list.scss */
 .linksList-item {
   border-bottom: 1px solid rgba(153, 153, 153, 0.8);
   padding-top: 24px;
-  padding-bottom: 12px;
-}
+  padding-bottom: 12px; }
 
-/* line 50, ../../../sass/components/_links-list.scss */
 .linksList-link {
-  color: #fffff7;
+  color: #FFFFF7;
   overflow: hidden;
   display: inline-block;
-  height: 48px;
-}
+  height: 48px; }
 
-/* line 8, ../../../sass/components/_page-title.scss */
 .pageTitle {
-  background-color: #83d6de;
-  position: relative;
-}
+  background-color: #83D6DE;
+  position: relative; }
 
-/* line 13, ../../../sass/components/_page-title.scss */
 .pageTitle-headline {
   font-size: 60px;
   line-height: 1.5;
-  color: #fffff7;
+  color: #FFFFF7;
   font-weight: 700;
   margin: 0;
   padding-top: 24px;
   padding-bottom: 24px;
   text-align: center;
-  display: block;
-}
-@media only screen and (max-width: 767px) {
-  /* line 13, ../../../sass/components/_page-title.scss */
-  .pageTitle-headline {
-    font-size: 48px;
-  }
-}
+  display: block; }
+  @media only screen and (max-width: 767px) {
+    .pageTitle-headline {
+      font-size: 48px; } }
 
 @media only screen and (max-width: 767px) {
-  /* line 29, ../../../sass/components/_page-title.scss */
   .pageTitle-headline--sm {
-    font-size: 24px;
-  }
-}
+    font-size: 24px; } }
 
-/* line 35, ../../../sass/components/_page-title.scss */
 .pageTitle-subline {
   font-size: 24px;
   margin-top: 0;
   margin-bottom: 0;
   padding-bottom: 24px;
   text-align: center;
-  color: white;
-}
-@media only screen and (max-width: 767px) {
-  /* line 35, ../../../sass/components/_page-title.scss */
-  .pageTitle-subline {
-    font-size: 16px;
-  }
-}
+  color: #FFFFFF; }
+  @media only screen and (max-width: 767px) {
+    .pageTitle-subline {
+      font-size: 16px; } }
 
-/* line 49, ../../../sass/components/_page-title.scss */
 .has-triangle {
-  position: relative;
-}
-/* line 52, ../../../sass/components/_page-title.scss */
-.has-triangle:after {
-  content: "";
-  position: absolute;
-  bottom: -24px;
-  left: 80px;
-  border-width: 24px 24px 0;
-  border-style: solid;
-  border-color: #83d6de transparent;
-  z-index: 1;
-}
-@media only screen and (max-width: 767px) {
-  /* line 52, ../../../sass/components/_page-title.scss */
+  position: relative; }
   .has-triangle:after {
-    border-width: 18px 18px 0;
-    bottom: -18px;
-  }
-}
+    content: "";
+    position: absolute;
+    bottom: -24px;
+    left: 80px;
+    border-width: 24px 24px 0;
+    border-style: solid;
+    border-color: #83D6DE transparent;
+    z-index: 1; }
+    @media only screen and (max-width: 767px) {
+      .has-triangle:after {
+        border-width: 18px 18px 0;
+        bottom: -18px; } }
 
-/* line 6, ../../../sass/utilities/_colours.scss */
 .takeYourDesire {
-  background-color: #ff6766;
-}
+  background-color: #FF6766; }
 
-/* line 10, ../../../sass/utilities/_colours.scss */
 .illStayHere {
-  background-color: #60646d;
-}
+  background-color: #60646D; }
 
-/* line 14, ../../../sass/utilities/_colours.scss */
 .marshmallow {
-  background-color: #fffff7;
-}
+  background-color: #FFFFF7; }
 
-/* line 18, ../../../sass/utilities/_colours.scss */
 .cursive {
-  background-color: #83d6de;
-}
+  background-color: #83D6DE; }
 
-/* line 22, ../../../sass/utilities/_colours.scss */
 .fern {
-  background-color: #97ce68;
-}
+  background-color: #97CE68; }
 
-/* line 26, ../../../sass/utilities/_colours.scss */
 .cloudyBlue {
-  background-color: #ecf0f1;
-}
+  background-color: #ECF0F1; }
 
-/* line 30, ../../../sass/utilities/_colours.scss */
 .alto {
-  background-color: #dfdfdf;
-}
+  background-color: #DFDFDF; }
 
-/* line 6, ../../../sass/utilities/_grid.scss */
 .layoutContainer {
   max-width: 1000px;
   margin: 0 auto;
   overflow: hidden;
   padding-left: 12px;
-  padding-right: 12px;
-}
+  padding-right: 12px; }
 
-/* line 14, ../../../sass/utilities/_grid.scss */
 .layoutContainer--visible {
-  overflow: visible;
-}
+  overflow: visible; }
 
-/* line 7, ../../../sass/utilities/_typography.scss */
 .h1 {
   font-size: 60px;
   font-weight: 700;
-  line-height: 1.5;
-}
+  line-height: 1.5; }
 
-/* line 13, ../../../sass/utilities/_typography.scss */
 .h2 {
   font-size: 48px;
   font-weight: 700;
-  line-height: 1.5;
-}
+  line-height: 1.5; }
 
-/* line 19, ../../../sass/utilities/_typography.scss */
 .h3 {
   font-size: 24px;
   font-weight: 700;
-  line-height: 1.5;
-}
+  line-height: 1.5; }
 
-/* line 25, ../../../sass/utilities/_typography.scss */
 .h4 {
   font-size: 16px;
-  line-height: 1.5;
-}
+  line-height: 1.5; }
 
-/* line 31, ../../../sass/utilities/_typography.scss */
 .hideText {
   text-indent: 100%;
   white-space: nowrap;
-  overflow: hidden;
-}
+  overflow: hidden; }
 
-/* line 38, ../../../sass/utilities/_typography.scss */
 .visuallyHidden {
   position: absolute !important;
   overflow: hidden !important;
@@ -412,56 +274,37 @@ blockquote {
   height: 1px !important;
   padding: 0 !important;
   border: 0 !important;
-  clip: rect(1px, 1px, 1px, 1px) !important;
-}
+  clip: rect(1px, 1px, 1px, 1px) !important; }
 
-/* line 5, ../../../sass/utilities/_social.scss */
 .social {
-  background-image: url('../../../images/social.png?1408391821');
+  background-image: url(../../../images/social.png);
   background-repeat: no-repeat;
   height: 32px;
   width: 32px;
-  display: block;
-}
-/* line 12, ../../../sass/utilities/_social.scss */
-.social.linkedIn {
-  background-position: 0 -33px;
-}
-/* line 16, ../../../sass/utilities/_social.scss */
-.social.google {
-  background-position: 0 0;
-}
-/* line 20, ../../../sass/utilities/_social.scss */
-.social.rss {
-  background-position: 0 -66px;
-}
-/* line 24, ../../../sass/utilities/_social.scss */
-.social.twitter {
-  background-position: 0 -99px;
-}
+  display: block; }
+  .social.linkedIn {
+    background-position: 0 -33px; }
+  .social.google {
+    background-position: 0 0; }
+  .social.rss {
+    background-position: 0 -66px; }
+  .social.twitter {
+    background-position: 0 -99px; }
 
-/* line 5, ../../../sass/utilities/_margin.scss */
 .m-r--full {
-  margin-right: 24px;
-}
+  margin-right: 24px; }
 
-/* line 9, ../../../sass/utilities/_margin.scss */
 .m-b--full {
-  margin-bottom: 24px;
-}
+  margin-bottom: 24px; }
 
-/* line 13, ../../../sass/utilities/_margin.scss */
 .m-t--full {
-  margin-top: 24px;
-}
+  margin-top: 24px; }
 
-/* line 17, ../../../sass/utilities/_margin.scss */
 .m-tb--full {
   margin-top: 24px;
-  margin-bottom: 24px;
-}
+  margin-bottom: 24px; }
 
-/* line 31, ../../../sass/pages/post/landingpage.scss */
 .subTitle {
-  padding-top: 48px;
-}
+  padding-top: 48px; }
+
+/*# sourceMappingURL=landingpage-ie.css.map */
